[package]
name = "hajermi_pow"
version = "0.1.0"
authors = ["Marcin <m.liebiediew@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3 = "0.9.1"
base64 = "0.13.0"
hex = "0.4.3"
itertools = "0.10"
structopt = "0.3.21"
